--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="heading">Iam saketh</h1>
     <p class="web">Iam a<span>pro</span>grammer </p>
     <img class="cloudone" src="pngwing.com.png">
-    <img class="cloudtwo" src="Cpngwing.com.png" alt="cloud img ">
+    <img class="cloudtwo" src="pngwing.com.png" alt="cloud img ">
     <img class="mount" src="pngkey.com-snow-mountain-png-1118124.png" alt="mountain img">
   </div>
   <div class="two">
