--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="two">
     <img class="myself"src="https://i.pinimg.com/originals/94/c8/f9/94c8f9b0fb624a6c50519e8d4cbc3802.jpg" alt="my self">
 <h1 class="hello">Hello</h1>
-<p>&#10084;iam a web developer &#10084;</p>
+<p>&#10084;Iam a web developer &#10084;</p>
 <p>&#10084;this is my first css enables webpage &#10084;</p>
 <p>&#10084;this was not less than a feat &#10084;</p>
 <br>
@@ -34,10 +34,10 @@
   </div>
   <div class="three">
 <p> &#10084; frankly speaking iam an imature programmer&#10084;</p>
-<p> &#10084;  iam a evid reader with a speed of 400wpm&#10084;</p>
-<p>&#10084;   i do type well and accurately&#10084;</p>
-<p> &#10084;  well i play guitar well&#10084;</p>
-<p> &#10084; then iam a novelist&#10084;</p>
+<p> &#10084;  Iam a evid reader with a speed of 400wpm&#10084;</p>
+<p>&#10084;   I do type well and accurately&#10084;</p>
+<p> &#10084;  well I play guitar well&#10084;</p>
+<p> &#10084; then Iam a novelist&#10084;</p>
 <br>
 <br>
 <hr class="line">
@@ -53,7 +53,7 @@
 <td > <h1 class="design">Design and developement</h1>
 <p>&#10084; started this a fortnight ago&#10084;</p>
 <p>&#10084;this thing highly bends towards creation&#10084;</p>
-<p>&#10084;i feel react is for the best&#10084; </p></td>
+<p>&#10084;I feel react is for the best&#10084; </p></td>
 </tr>
 </table>
 </center>
@@ -63,7 +63,7 @@
 <br>
 <h1 class="contact">Get in touch</h1>
 <br>
-<p class="contact">If you love coding as much as i do</p>
+<p class="contact">If you love coding as much as I do</p>
 <br>
 <p>love coding as much as i do?</p>
 <p>lets talk about how awsome it is to code</p>
