--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="one">
     <h1 class="heading">Iam saketh</h1>
-    <p class="web">Iam a<span>pro</span>grammer </p>
+    <p class="web"><pre>I am</pre> a<span>pro</span>grammer </p>
     <img class="cloudone" src="pngwing.com.png">
     <img class="cloudtwo" src="pngwing.com.png" alt="cloud img ">
     <img class="mount" src="pngkey.com-snow-mountain-png-1118124.png" alt="mountain img">
@@ -22,7 +22,7 @@
   <div class="two">
     <img class="myself"src="https://i.pinimg.com/originals/94/c8/f9/94c8f9b0fb624a6c50519e8d4cbc3802.jpg" alt="my self">
 <h1 class="hello">Hello</h1>
-<p>&#10084;Iam a web developer &#10084;</p>
+<p>&#10084;<pre>I am</pre> a web developer &#10084;</p>
 <p>&#10084;this is my first css enables webpage &#10084;</p>
 <p>&#10084;this was not less than a feat &#10084;</p>
 <br>
@@ -33,11 +33,11 @@
 <h1 class="myskills ">My skills </h1>
   </div>
   <div class="three">
-<p> &#10084; frankly speaking iam an imature programmer&#10084;</p>
-<p> &#10084;  Iam a evid reader with a speed of 400wpm&#10084;</p>
+<p> &#10084; frankly speaking <pre>I am</pre> an imature programmer&#10084;</p>
+<p> &#10084;  <pre>I am</pre> a evid reader with a speed of 400wpm&#10084;</p>
 <p>&#10084;   I do type well and accurately&#10084;</p>
 <p> &#10084;  well I play guitar well&#10084;</p>
-<p> &#10084; then Iam a novelist&#10084;</p>
+<p> &#10084; then <pre>I am</pre> a novelist&#10084;</p>
 <br>
 <br>
 <hr class="line">
@@ -65,7 +65,7 @@
 <br>
 <p class="contact">If you love coding as much as I do</p>
 <br>
-<p>love coding as much as i do?</p>
+<p>love coding as much as I do?</p>
 <p>lets talk about how awsome it is to code</p>
 <br>
 <br>
