--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h1 class="myskills ">My skills </h1>
   </div>
   <div class="three">
-<p> &#10084; frankly speaking <pre>I am</pre> an imature programmer&#10084;</p>
+<p> &#10084; frankly speaking I am an imature programmer&#10084;</p>
 <p> &#10084; I am a evid reader with a speed of 400wpm&#10084;</p>
 <p>&#10084;   I do type well and accurately&#10084;</p>
 <p> &#10084;  well I play guitar well&#10084;</p>
